modified:   index.html

--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@ An active member of KLU GNU Linux users group.</li>
 
     </div>
     <div id="menu2" class="tab-pane fade">
-      <center>Developer has disabled the form for changes<br />
-      Form is under construction comeback later</center>
+      <center><h2>Developer has disabled the form for changes<br />
+      Form is under construction comeback later</h2></center>
     </div>
       </div>
   </div>
