--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <center><h3><i><u>Skills</u></i></h3></center>
       <div class="row">
         <div class="col-sm-3">
-  <h4>HTML</h4>
+  <h4>Jenkins</h4>
   <div class="card">
     <div class="card-body">
 <span class="fa fa-star checked"></span>
@@ -64,7 +64,7 @@
   </div>
 </div>
 <div class="col-sm-3">
-  <h4>CSS</h4>
+  <h4>Maven</h4>
   <div class="card">
     <div class="card-body">
 <span class="fa fa-star checked"></span>
@@ -76,31 +76,7 @@
   </div>
 </div>
 <div class="col-sm-3">
-  <h4>JAVASCRIPT</h4>
-  <div class="card">
-    <div class="card-body">
-<span class="fa fa-star checked"></span>
-<span class="fa fa-star checked"></span>
-<span class="fa fa-star checked"></span>
-<span class="fa fa-star"></span>
-<span class="fa fa-star"></span>
-</div>
-  </div>
-</div>
-<div class="col-sm-3">
-  <h4>BOOTSTRAP</h4>
-  <div class="card">
-    <div class="card-body">
-<span class="fa fa-star checked"></span>
-<span class="fa fa-star checked"></span>
-<span class="fa fa-star checked"></span>
-<span class="fa fa-star checked"></span>
-<span class="fa fa-star checked"></span>
-</div>
-  </div>
-</div>
-<div class="col-sm-3">
-  <h4>DRUPAL</h4>
+  <h4>Shell Scripting</h4>
   <div class="card">
     <div class="card-body">
 <span class="fa fa-star checked"></span>
@@ -112,7 +88,7 @@
   </div>
 </div>
 <div class="col-sm-3">
-  <h4>PHP</h4>
+  <h4>Amazon web services</h4>
   <div class="card">
     <div class="card-body">
 <span class="fa fa-star checked"></span>
@@ -124,7 +100,31 @@
   </div>
 </div>
 <div class="col-sm-3">
-  <h4>CODEIGNITER</h4>
+  <h4>Git</h4>
+  <div class="card">
+    <div class="card-body">
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star"></span>
+<span class="fa fa-star"></span>
+</div>
+  </div>
+</div>
+<div class="col-sm-3">
+  <h4>Docker</h4>
+  <div class="card">
+    <div class="card-body">
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+</div>
+  </div>
+</div>
+<div class="col-sm-3">
+  <h4>Kubernaties</h4>
   <div class="card">
     <div class="card-body">
 <span class="fa fa-star checked"></span>
